--- a/automated.html
+++ b/automated.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="automated.css" />
+    <link rel="stylesheet" href="sidebar.css" />
   </head>
   <body>
     <header class="header">
