--- a/dashboard.html
+++ b/dashboard.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="dashboard.css" />
+    <link rel="stylesheet" href="sidebar.css" />
   </head>
   <body>
     <header class="header">
