change the file style name

--- a/Gis-Intergration .html
+++ b/Gis-Intergration .html
@@ -10,7 +10,7 @@
     <!-- <link rel="stylesheet" href="dashboard.css" /> -->
     <link rel="stylesheet" href="sidebar.css" />
 
-    <link rel="stylesheet" href="gisintegration.css" />
+    <link rel="stylesheet" href="gis-integration.css" />
     <!-- <link rel="stylesheet" href="gisintegration.css"> -->
 </head>
 
