--- a/department.html
+++ b/department.html
@@ -35,7 +35,7 @@
     </header>
     <div class="sidebar">
       <nav class="sidebar-menu">
-        <a href="#" class="menu-item">
+        <a href="dashboard.html" class="menu-item">
           <svg
             width="16"
             height="16"
@@ -48,9 +48,10 @@
               fill="white"
             />
           </svg>
+
           <span>Dashboard</span>
         </a>
-        <a href="#" class="menu-item">
+        <a href="document.html" class="menu-item">
           <svg
             width="16"
             height="16"
@@ -63,9 +64,10 @@
               fill="white"
             />
           </svg>
+
           <span>Document Extraction</span>
         </a>
-        <a href="#" class="menu-item">
+        <a href="automated.html" class="menu-item">
           <svg
             width="16"
             height="16"
@@ -78,9 +80,10 @@
               fill="white"
             />
           </svg>
+
           <span>File Validation</span>
         </a>
-        <a href="#" class="menu-item">
+        <a href="Enhanced.html" class="menu-item">
           <svg
             width="16"
             height="16"
@@ -93,9 +96,10 @@
               fill="white"
             />
           </svg>
+
           <span>Document Review</span>
         </a>
-        <a href="#" class="menu-item">
+        <a href="version-control.html" class="menu-item">
           <svg
             width="16"
             height="16"
@@ -108,9 +112,10 @@
               fill="white"
             />
           </svg>
+
           <span>Version Control</span>
         </a>
-        <a href="#" class="menu-item">
+        <a href="Interactive.html" class="menu-item">
           <svg
             width="16"
             height="16"
@@ -123,9 +128,10 @@
               fill="white"
             />
           </svg>
+
           <span>Issue Resolution</span>
         </a>
-        <a href="#" class="menu-item">
+        <a href="enhance-completion-report.html" class="menu-item">
           <svg
             width="16"
             height="16"
@@ -138,24 +144,11 @@
               fill="white"
             />
           </svg>
+
           <span>Completeness Report</span>
         </a>
-        <a href="#" class="menu-item">
-          <svg
-            width="16"
-            height="16"
-            viewBox="0 0 12 12"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M5.40906 5.41634V3.08301H6.57531V5.41634H8.90781V6.58301H6.57531V8.91634H5.40906V6.58301H3.07656V5.41634H5.40906ZM5.99218 11.833C5.19913 11.833 4.44107 11.6813 3.718 11.378C3.02602 11.0825 2.40985 10.6644 1.86949 10.1238C1.32913 9.58329 0.911222 8.9669 0.615772 8.27467C0.312547 7.55134 0.160934 6.79301 0.160934 5.99967C0.160934 5.20634 0.312547 4.44801 0.615772 3.72467C0.911222 3.03245 1.32913 2.41606 1.86949 1.87551C2.40985 1.33495 3.02602 0.916897 3.718 0.621341C4.44107 0.318007 5.19913 0.166341 5.99218 0.166341C6.78523 0.166341 7.5433 0.318007 8.26637 0.621341C8.95835 0.916897 9.57452 1.33495 10.1149 1.87551C10.6552 2.41606 11.0731 3.03245 11.3686 3.72467C11.6718 4.44801 11.8234 5.20634 11.8234 5.99967C11.8234 6.79301 11.6718 7.55134 11.3686 8.27467C11.0731 8.9669 10.6552 9.58329 10.1149 10.1238C9.57452 10.6644 8.95835 11.0825 8.26637 11.378C7.5433 11.6813 6.78523 11.833 5.99218 11.833ZM5.99218 10.6663C6.83966 10.6663 7.62493 10.4525 8.34801 10.0247C9.04776 9.61245 9.60367 9.05634 10.0157 8.35634C10.4434 7.63301 10.6572 6.84745 10.6572 5.99967C10.6572 5.1519 10.4434 4.36634 10.0157 3.64301C9.60367 2.94301 9.04776 2.3869 8.34801 1.97467C7.62493 1.5469 6.83966 1.33301 5.99218 1.33301C5.14471 1.33301 4.35943 1.5469 3.63636 1.97467C2.93661 2.3869 2.3807 2.94301 1.96862 3.64301C1.541 4.36634 1.32718 5.1519 1.32718 5.99967C1.32718 6.84745 1.541 7.63301 1.96862 8.35634C2.3807 9.05634 2.93661 9.61245 3.63636 10.0247C4.35943 10.4525 5.14471 10.6663 5.99218 10.6663Z"
-              fill="white"
-            />
-          </svg>
-          <span>Project Creation</span>
         </a>
-        <a href="#" class="menu-item">
+        <a href="department.html" class="menu-item active">
           <svg
             width="16"
             height="16"
@@ -168,9 +161,10 @@
               fill="white"
             />
           </svg>
+
           <span>Department Routing</span>
         </a>
-        <a href="#" class="menu-item">
+        <a href="Status-Tracking.html" class="menu-item">
           <svg
             width="16"
             height="16"
@@ -183,9 +177,10 @@
               fill="white"
             />
           </svg>
+
           <span>Status Tracking</span>
         </a>
-        <a href="#" class="menu-item">
+        <a href="planning-zoning.html" class="menu-item">
           <svg
             width="16"
             height="16"
@@ -198,9 +193,10 @@
               fill="white"
             />
           </svg>
+
           <span>Planning & Zoning</span>
         </a>
-        <a href="#" class="menu-item">
+        <a href="code.html" class="menu-item">
           <svg
             width="16"
             height="16"
@@ -213,9 +209,10 @@
               fill="white"
             />
           </svg>
+
           <span>Code Enforcement</span>
         </a>
-        <a href="#" class="menu-item">
+        <a href="Gis-Intergration.html" class="menu-item">
           <svg
             width="16"
             height="16"
@@ -228,6 +225,7 @@
               fill="white"
             />
           </svg>
+
           <span>GIS Integration</span>
         </a>
       </nav>
