--- a/document.html
+++ b/document.html
@@ -52,8 +52,8 @@
         </a>
         <a href="document.html" class="menu-item active">
           <svg
-            width="16px"
-            height="16px"
+            width="16"
+            height="16"
             viewBox="0 0 12 12"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
@@ -145,7 +145,6 @@
           </svg>
 
           <span>Completeness Report</span>
-        </a>
         </a>
         <a href="department.html" class="menu-item">
           <svg
