--- a/Gis-Intergration.html
+++ b/Gis-Intergration.html
@@ -363,78 +363,20 @@
               Print Map
             </button>
           </div>
+
           <!-- Interactive GIS Map -->
           <div class="map-container">
-            <div class="map-header">
-              <button class="map-title">Interactive GIS Map</button>
-              <button class="map-location">
-                Lago Vista, TX - Development Services
-              </button>
-            </div>
             <div class="map-area">
               <img
-                src="images/image.jpg"
+                src="images/map.png"
                 alt="Interactive GIS Map"
                 class="map-image"
               />
-
-              <div class="map-legend">
-                <button class="legend-item legend-active">
-                  <svg
-                    width="9"
-                    height="8"
-                    viewBox="0 0 9 8"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M0.5625 4C0.5625 1.79086 2.35336 0 4.5625 0C6.77164 0 8.5625 1.79086 8.5625 4C8.5625 6.20914 6.77164 8 4.5625 8C2.35336 8 0.5625 6.20914 0.5625 4Z"
-                      fill="white"
-                    />
-                  </svg>
-                  Active Permits
-                </button>
-                <button class="legend-item legend-violations">
-                  <svg
-                    width="9"
-                    height="8"
-                    viewBox="0 0 9 8"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M0.5625 4C0.5625 1.79086 2.35336 0 4.5625 0C6.77164 0 8.5625 1.79086 8.5625 4C8.5625 6.20914 6.77164 8 4.5625 8C2.35336 8 0.5625 6.20914 0.5625 4Z"
-                      fill="white"
-                    />
-                  </svg>
-                  Violations
-                </button>
-                <button class="legend-item legend-completed">
-                  <svg
-                    width="9"
-                    height="8"
-                    viewBox="0 0 9 8"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M0.5625 4C0.5625 1.79086 2.35336 0 4.5625 0C6.77164 0 8.5625 1.79086 8.5625 4C8.5625 6.20914 6.77164 8 4.5625 8C2.35336 8 0.5625 6.20914 0.5625 4Z"
-                      fill="white"
-                    />
-                  </svg>
-                  Completed
-                </button>
-              </div>
-
-              <button class="map-info">
-                <span>Scale: 1" = 200'</span><br />
-                <span>Last Updated: Aug 7, 2025</span>
-              </button>
             </div>
           </div>
 
           <!-- Added property search section -->
-          <div style="margin-top: -66px">
+          <div>
             <h2 class="section-title">Property Search</h2>
             <div class="property-search">
               <input
