- Update logout links to redirect to Login.html across multiple files - Update login page redirection link - Fix page header in multiple pages

--- a/Enhanced.html
+++ b/Enhanced.html
@@ -29,7 +29,7 @@
           <span class="separator">|</span>
           <span class="user-role">Administrator</span>
           <span class="separator">|</span>
-          <a href="#" class="logout-link">Logout</a>
+          <a href="/Login.html" class="logout-link">Logout</a>
         </div>
       </div>
     </header>
