--- a/Status-Tracking.html
+++ b/Status-Tracking.html
@@ -29,7 +29,7 @@
           <span class="separator">|</span>
           <span class="user-role">Administrator</span>
           <span class="separator">|</span>
-          <a href="#" class="logout-link">Logout</a>
+          <a href="/Login.html" class="logout-link">Logout</a>
         </div>
       </div>
     </header>
